2003-06-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Multi measure rests): more
	index/cross-referencing.

	* lily/line-spanner.cc (line_molecule): bugfix for trill style.

	* scm/font.scm: remove properties-to-font-name code.

	* scm/define-grob-properties.scm: remove 'type

	* scripts/convert-ly.py (FatalConversionError.conv): type -> style
	conversion

	* lily/text-spanner.cc: change 'type grob prop to 'style 

	* lily/unfolded-repeat-iterator.cc (process): bugfix: use a
	"first" flag to decide whether to make a start-repeat

	* input/regression/grace-volta-repeat-2.ly: new file.

2003-06-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lilypond-indent.el: rename generic functions to LilyPond-*

2003-06-22  Graham Percival  <gperlist@shaw.ca>

	* input/test/thumb.ly: delete, merged into refman.

	* Documentation/user/refman.itely: added thumb info to Fingering.

	* input/test/ follow-break.ly multi-slope.ly note-shift.ly
	notemode-chords.ly orchestalpart.ly rhythmic-staff.ly
	vertical-align.ly : deleted files.

2003-06-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/align-interface.cc (find_fixed_alignment_parent): new function.

	* lily/line-spanner.cc (broken_trend_offset): remove function.
	(get_broken_offset): idem.
	(brew_molecule): rewrite the line-break case.

	* input/regression/follow-voice-break.ly:  new file.

	* lily/line-spanner.cc (after_line_breaking): remove lines at the
	start of a system.

2003-06-20  Graham Percival  <gperlist@shaw.ca>

	* input/test/tuplet-rest.ly: moved to regression.

	* input/test/ script-horizontal.ly tuplet-spanner-duration.ly:
	deleted file.

	* input/test/ {many} : marked file for possible deletion.

2003-06-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/beam-funky.ly: add note about (disputed)
	correct beaming.

	* ly/engraver-init.ly (ScoreContext): put key-signature after
	staff-bar
	
2003-06-20  Graham Percival  <gperlist@shaw.ca>
